--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -729,20 +729,20 @@
 const MOBILE = {
   dprMax: 3,
 
-  // buffer resolution (keep high so blur has data)
-  scale: 1.02,          // 0.95–1.10
+  // keep enough buffer detail for blur to blend smoothly
+  scale: 1.05,
 
-  // heavier composite blur
-  blurBaseMul: 3.75,    // 2.4–3.2
-  blurDetailMul: 2.25,  // 1.7–2.4
-  blurGlowMul: 3.85,    // 2.2–3.4
+  // blur (you can keep these high)
+  blurBaseMul: 3.4,
+  blurDetailMul: 2.4,
+  blurGlowMul: 3.2,
 
-  // reduce stamp feel
-  puffSizeMul: 0.78,    // 0.72–0.85
-  alphaMul: 0.58,       // 0.48–0.65
+  // ✅ these two matter most for “visible circles”
+  puffSizeMul: 0.78,   // smaller stamps
+  alphaMul: 0.52,      // more transparent stamps
 
-  // stamp killer (more melt)
-  meltScale: 0.40       // 0.34–0.48
+  // ✅ stronger stamp killer (smaller = more melt)
+  meltScale: 0.32
 };
   const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
