--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -941,7 +941,7 @@ const MOBILE = {
 
         // PASS 2: inner wisps
         const r2 = clamp(r1 * 0.40, 20, 88);
-        const a2 = IS_MOBILE ? a1 * 0.52 : a1 * 0.78;
+        const a2 = a1 * 0.78;
 
         puff(x + jx, yC + jy, r2, B, A, a2);
 
