--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -667,233 +667,380 @@
     }
   </script>
 
-  <script>
-    const canvas = document.getElementById("vapor");
-    const ctx = canvas.getContext("2d", { alpha:true });
+<script>
+  const canvas = document.getElementById("vapor");
+  const ctx = canvas.getContext("2d", { alpha: true });
 
-    // Offscreen buffer (we render the sim here, then blur-composite to main)
-    const buf = document.createElement("canvas");
-    const btx = buf.getContext("2d", { alpha:true });
+  // Offscreen buffer (we render the sim here, then blur-composite to main)
+  const buf = document.createElement("canvas");
+  const btx = buf.getContext("2d", { alpha: true });
 
-    const S = {
-      w:0, h:0,
-      dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-      t:0,
+  // ✅ Post buffer (mobile uses this as the “melted” source)
+  const post = document.createElement("canvas");
+  const ptx  = post.getContext("2d", { alpha: true });
 
-      // slow drift
-      speed: 0.0046,
+  // ✅ Melt buffer (mobile-only downsample → blur → upsample to kill circles)
+  const melt = document.createElement("canvas");
+  const mtx  = melt.getContext("2d", { alpha: true });
 
-      // ✅ smoothness / pixel control
-      // Higher scale = less pixelation. We also blur composite, so this stays airy.
-      scale: 0.70,     // (0.65–0.85 recommended)
-      fade: 0.22,     // less fade = more presence
-        glow: 0.25,      // tiny bump (still subtle)
-    density: 0.66,   // stronger vapor overall
+  const S = {
+    w: 0, h: 0,
+    dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
+    t: 0,
 
-      // across-screen band behavior
-      amp: 0.16,
-      drift: 0.16,
-      band: 0.16,
-      breakUp: 1.05,
+    // slow drift
+    speed: 0.0046,
 
-      // composite blur (kills pixel blocks)
-      blurBase: 10,    // main blur pass
-      blurDetail: 4,   // definition pass
-      blurGlow: 14,    // bloom pass
+    // ✅ smoothness / pixel control
+    scale: 0.70,   // desktop baseline (kept)
+    fade: 0.22,
+    glow: 0.25,
+    density: 0.66,
 
-      // mouse drift
-      mx:0, my:0, px:0, py:0
-    };
+    // across-screen band behavior
+    amp: 0.16,
+    drift: 0.16,
+    band: 0.16,
+    breakUp: 1.05,
 
-    function resize(){
-      S.w = Math.floor(window.innerWidth);
-      S.h = Math.floor(window.innerHeight);
+    // composite blur (desktop baseline)
+    blurBase: 10,
+    blurDetail: 4,
+    blurGlow: 14,
 
-      // Main canvas uses DPR for sharp UI layers
-      canvas.width  = Math.floor(S.w * S.dpr);
-      canvas.height = Math.floor(S.h * S.dpr);
-      canvas.style.width  = S.w + "px";
-      canvas.style.height = S.h + "px";
-      ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+    // mouse drift
+    mx: 0, my: 0, px: 0, py: 0
+  };
 
-      // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
-      // Render buffer in its own pixel space
-      buf.width  = Math.floor(S.w * S.scale);
-      buf.height = Math.floor(S.h * S.scale);
-      btx.setTransform(1,0,0,1,0,0);
+  // --- Mobile detection ---
+  const IS_MOBILE = window.matchMedia("(hover: none) and (pointer: coarse)").matches;
 
-      // store for step()
-      S.bw = buf.width;
-      S.bh = buf.height;
+  // keep your desktop values as baseline (restored on desktop)
+  const DESKTOP = {
+    dprMax: 2,
+    scale: S.scale,
+    blurBase: S.blurBase,
+    blurDetail: S.blurDetail,
+    blurGlow: S.blurGlow
+  };
 
-      // Quality hints
-      ctx.imageSmoothingEnabled = true;
-      ctx.imageSmoothingQuality = "high";
-      btx.imageSmoothingEnabled = true;
-      btx.imageSmoothingQuality = "high";
+  // mobile overrides (ONLY mobile changes)
+// mobile overrides (ONLY mobile changes)
+const MOBILE = {
+  dprMax: 3,
 
-      // clear
-      btx.fillStyle = "rgba(0,0,0,1)";
-      btx.fillRect(0,0,S.bw,S.bh);
-      ctx.clearRect(0,0,S.w,S.h);
+  // keep enough buffer detail for blur to blend smoothly
+  scale: 1.05,
+
+  // blur (you can keep these high)
+  blurBaseMul: 3.2,
+  blurDetailMul: 2.4,
+  blurGlowMul: 3.2,
+
+  // ✅ these two matter most for “visible circles”
+  puffSizeMul: 0.78,   // smaller stamps
+  alphaMul: 0.62,      // more transparent stamps
+
+  // ✅ stronger stamp killer (smaller = more melt)
+  meltScale: 0.32
+};
+  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
+
+  function resize() {
+    const vw = window.visualViewport?.width ?? window.innerWidth;
+    const vh = window.visualViewport?.height ?? window.innerHeight;
+
+    S.w = Math.floor(vw);
+    S.h = Math.floor(vh);
+
+    const dprMax = IS_MOBILE ? MOBILE.dprMax : DESKTOP.dprMax;
+    S.dpr = Math.max(1, Math.min(dprMax, window.devicePixelRatio || 1));
+
+    const scale = IS_MOBILE ? MOBILE.scale : DESKTOP.scale;
+
+    // Main canvas uses DPR
+    canvas.width = Math.floor(S.w * S.dpr);
+    canvas.height = Math.floor(S.h * S.dpr);
+    canvas.style.width = S.w + "px";
+    canvas.style.height = S.h + "px";
+    ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
+
+    // Sim buffer
+    buf.width = Math.floor(S.w * scale);
+    buf.height = Math.floor(S.h * scale);
+    btx.setTransform(1, 0, 0, 1, 0, 0);
+
+    // Post buffer matches sim
+    post.width = buf.width;
+    post.height = buf.height;
+    ptx.setTransform(1, 0, 0, 1, 0, 0);
+
+    // Melt buffer is downsampled on mobile only
+    const meltScale = IS_MOBILE ? MOBILE.meltScale : 1;
+    melt.width  = Math.max(1, Math.floor(buf.width  * meltScale));
+    melt.height = Math.max(1, Math.floor(buf.height * meltScale));
+    mtx.setTransform(1, 0, 0, 1, 0, 0);
+
+    S.bw = buf.width;
+    S.bh = buf.height;
+
+    // blur tuning (ONLY mobile changes)
+    if (IS_MOBILE) {
+      S.blurBase = Math.round(DESKTOP.blurBase * MOBILE.blurBaseMul);
+      S.blurDetail = Math.round(DESKTOP.blurDetail * MOBILE.blurDetailMul);
+      S.blurGlow = Math.round(DESKTOP.blurGlow * MOBILE.blurGlowMul);
+    } else {
+      S.blurBase = DESKTOP.blurBase;
+      S.blurDetail = DESKTOP.blurDetail;
+      S.blurGlow = DESKTOP.blurGlow;
     }
-    window.addEventListener("resize", resize, { passive:true });
-    resize();
 
-    window.addEventListener("pointermove", (e)=>{
+    // quality hints
+    ctx.imageSmoothingEnabled = true;
+    ctx.imageSmoothingQuality = "high";
+    btx.imageSmoothingEnabled = true;
+    btx.imageSmoothingQuality = "high";
+    ptx.imageSmoothingEnabled = true;
+    ptx.imageSmoothingQuality = "high";
+    mtx.imageSmoothingEnabled = true;
+    mtx.imageSmoothingQuality = "high";
+
+    // clear
+    btx.fillStyle = "rgba(0,0,0,1)";
+    btx.fillRect(0, 0, S.bw, S.bh);
+    ptx.clearRect(0, 0, S.bw, S.bh);
+    mtx.clearRect(0, 0, melt.width, melt.height);
+    ctx.clearRect(0, 0, S.w, S.h);
+  }
+
+  window.addEventListener("resize", resize, { passive: true });
+  window.visualViewport?.addEventListener("resize", resize, { passive: true });
+  resize();
+
+  window.addEventListener(
+    "pointermove",
+    (e) => {
       S.mx = (e.clientX / S.w) * 2 - 1;
       S.my = (e.clientY / S.h) * 2 - 1;
-    }, { passive:true });
+    },
+    { passive: true }
+  );
 
-    const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
+  // organic-ish fast noise
+  function n2(x, y) {
+    return (
+      Math.sin(x * 1.7 + Math.cos(y * 1.3)) *
+      Math.cos(y * 1.5 + Math.sin(x * 1.1))
+    );
+  }
 
-    // organic-ish fast noise
-    function n2(x,y){
-      return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
-    }
+  // Airy puff (no bright white hotspot)
+  function puff(x, y, r, colA, colB, a) {
+    const g = btx.createRadialGradient(x, y, 0, x, y, r);
+    g.addColorStop(0.0, colA.replace("{a}", (0.52 * a).toFixed(4)));
+    g.addColorStop(0.38, colB.replace("{a}", (0.46 * a).toFixed(4)));
+    g.addColorStop(0.78, colA.replace("{a}", (0.15 * a).toFixed(4)));
+    g.addColorStop(1.0, colA.replace("{a}", "0"));
+    btx.fillStyle = g;
+    btx.beginPath();
+    btx.arc(x, y, r, 0, Math.PI * 2);
+    btx.fill();
+  }
 
-    // Airy puff (no bright white hotspot)
-    function puff(x,y,r, colA, colB, a){
-      const g = btx.createRadialGradient(x,y,0, x,y,r);
-      g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
-      g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
-      g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
-      g.addColorStop(1.00, colA.replace("{a}", "0"));
-      btx.fillStyle = g;
-      btx.beginPath();
-      btx.arc(x,y,r,0,Math.PI*2);
-      btx.fill();
-    }
+  // Across-screen centerline
+  function ribbonY(u, yBase, amp, phase) {
+    const t = S.t;
+    const f1 = Math.sin(t * 0.95 + u * 6.2 + phase);
+    const f2 = Math.sin(t * 0.55 + u * 13.0 - phase * 0.7);
+    const f3 = Math.sin(t * 1.35 + u * 3.2);
+    const wave = f1 * 0.55 + f2 * 0.3 + f3 * 0.15;
+    return yBase + wave * amp;
+  }
 
-    // Across-screen centerline
-    function ribbonY(u, yBase, amp, phase){
-      const t = S.t;
-      const f1 = Math.sin(t*0.95 + u*6.2 + phase);
-      const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
-      const f3 = Math.sin(t*1.35 + u*3.2);
-      const wave = f1*0.55 + f2*0.30 + f3*0.15;
-      return yBase + wave * amp;
-    }
+  function step() {
+    S.t += S.speed;
 
-    function step(){
-      S.t += S.speed;
+    // mouse drift (soft)
+    S.px += (S.mx - S.px) * 0.03;
+    S.py += (S.my - S.py) * 0.03;
 
-      // mouse drift
-      S.px += (S.mx - S.px) * 0.03;
-      S.py += (S.my - S.py) * 0.03;
+    const W = S.bw;
+    const H = S.bh;
 
-      const W = S.bw;
-      const H = S.bh;
+    // fade buffer (trails)
+    btx.globalCompositeOperation = "source-over";
+    btx.fillStyle = `rgba(0,0,0,${S.fade})`;
+    btx.fillRect(0, 0, W, H);
 
-      // fade buffer (trails)
-      btx.globalCompositeOperation = "source-over";
-      btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-      btx.fillRect(0,0,W,H);
+    // draw vapor
+    btx.globalCompositeOperation = "lighter";
 
-      // draw vapor
-      btx.globalCompositeOperation = "lighter";
+    const layers = [
+      { y: 0.33, amp: S.amp * 0.85, phase: 0.0, drift: 0.14, tint: 0.0, strength: 0.92 },
+      { y: 0.56, amp: S.amp * 1.05, phase: 1.4, drift: -0.10, tint: 1.3, strength: 0.80 },
+      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift: 0.08, tint: 2.2, strength: 0.70 }
+    ];
 
-      const layers = [
-        { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-        { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-        { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
-      ];
+    for (const L of layers) {
+      const sweep = Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5;
+      const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
-      for(const L of layers){
-        const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
-        const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
+      // ✅ increase overlap on mobile (less stamp visibility)
+      const steps = IS_MOBILE ? 190 : 120;
 
-        const steps = 120; // continuous bands across screen
+      for (let i = 0; i <= steps; i++) {
+        const u = i / steps;
 
-        for(let i=0;i<=steps;i++){
-          const u = i/steps;
+        const TAIL = 520;
+        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+        const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
 
-          const TAIL = 520; // <— bigger = longer ends
-          const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
-          const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
+        const band = S.band * H;
 
-          const band = (S.band * H);
+        const tt = S.t * 0.9 + L.phase + u * 2.0;
+        const wx = n2(tt * 0.8, u * 4.0 + L.phase);
+        const wy = n2(u * 3.0 - L.phase, tt * 0.7);
 
-          const tt = S.t*0.9 + L.phase + u*2.0;
-          const wx = n2(tt*0.8, u*4.0 + L.phase);
-          const wy = n2(u*3.0 - L.phase, tt*0.7);
+        const jx = wx * band * 0.36 * S.breakUp;
+        const jy = wy * band * 0.30 * S.breakUp;
 
-          const jx = wx * band * 0.36 * S.breakUp;
-          const jy = wy * band * 0.30 * S.breakUp;
+        // ✅ Mobile color lock: ignore L.tint on phones so ribbons don’t turn blue
+        const tint = IS_MOBILE ? 0 : L.tint;
 
-          // soft color drift; includes #54f3a4 (mint) but avoids too much white
-          const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
-          const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
+        const c1 = Math.sin(S.t * 0.30 + tint + u * 2.1) * 0.5 + 0.5;
+        const c2 = Math.cos(S.t * 0.24 - tint + u * 1.7) * 0.5 + 0.5;
 
-          const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`; // mint
-          const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+        // ✅ Stable mint palette (mobile tighter so it can’t shift cyan)
+        const gBoost = (IS_MOBILE ? 10 : 18) * (c2 - 0.5);
+        const bBoost = (IS_MOBILE ? 4 : 10) * (c1 - 0.5);
 
-          const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
+        const baseR = 84;
+        const baseG = 243;
+        const baseB = 164;
 
-          // PASS 1: wide haze sheet (defines long band, still vapor)
-          const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
-          const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
-          puff(x, yC, r1, A, B, a1);
+        const A = `rgba(${baseR}, ${clamp(baseG + gBoost, 225, 255)}, ${clamp(baseB + bBoost, 150, 175)}, {a})`;
+        const B = `rgba(${clamp(baseR - 10, 60, 90)}, ${clamp(baseG - 55 + gBoost, 160, 215)}, ${clamp(baseB - 35 + bBoost, 120, 155)}, {a})`;
 
-          // PASS 2: wisps / inner turbulence
-          const r2 = clamp(r1*0.40, 20, 88);
-          const a2 = a1 * 0.78;
-          puff(x + jx, yC + jy, r2, B, A, a2);
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
+        const sizeMul = IS_MOBILE ? MOBILE.puffSizeMul : 1;
 
-          const off = (wy * 0.5 + 0.5) * band * 0.90;
-          puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
-          puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
-        }
+        // PASS 1: wide haze sheet
+        const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)) * sizeMul, 52, 220);
 
-        // super soft background volume (very low alpha)
-        const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
-        const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
-        puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
+        const a1Base =
+          (0.010 + 0.010 * c1) *
+          S.density *
+          L.strength *
+          (0.40 + 0.60 * end);
+
+        // ✅ Mobile reduces stamp intensity
+        const a1 = IS_MOBILE ? a1Base * MOBILE.alphaMul : a1Base;
+        
+
+        puff(x, yC, r1, A, B, a1);
+
+        // PASS 2: inner wisps
+        const r2 = clamp(r1 * 0.40, 20, 88);
+        const a2 = a1 * 0.78;
+
+        puff(x + jx, yC + jy, r2, B, A, a2);
+
+        const off = (wy * 0.5 + 0.5) * band * 0.90;
+        puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
+        puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
       }
 
-      btx.globalCompositeOperation = "source-over";
-
-      // ✅ Pixel-killing composite: blur the buffer as we upscale
-      ctx.globalCompositeOperation = "source-over";
-      ctx.clearRect(0,0,S.w,S.h);
-
-      // base pass (soft)
-      ctx.save();
-      ctx.filter = `blur(${S.blurBase}px)`;
-      ctx.globalAlpha = 1;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      // detail pass (less blur, still smooth)
-      ctx.save();
-      ctx.filter = `blur(${S.blurDetail}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = 0.55;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      // glow pass (very soft)
-      ctx.save();
-      ctx.filter = `blur(${S.blurGlow}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = S.glow;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      ctx.globalAlpha = 1;
-      ctx.globalCompositeOperation = "source-over";
-      ctx.filter = "none";
+      // super soft background volume
+      const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
+      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
+      puff(
+        hx,
+        hy,
+        Math.hypot(W, H) * 0.22,
+        "rgba(84,243,164,{a})",
+        "rgba(170,110,255,{a})",
+        0.009 * S.density
+      );
     }
 
-    gsap.ticker.fps(60);
-    gsap.ticker.add(step);
+    btx.globalCompositeOperation = "source-over";
 
-    // Reduced motion
-    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-      gsap.ticker.remove(step);
-      for(let i=0;i<20;i++) step();
+    // ✅ MOBILE “STAMP KILLER”: downsample → blur → upsample into post
+    let SRC = buf;
+
+    if (IS_MOBILE) {
+      // 1) Downsample buf into melt (blends circle edges)
+      mtx.globalCompositeOperation = "source-over";
+      mtx.clearRect(0, 0, melt.width, melt.height);
+      mtx.filter = "none";
+      mtx.globalAlpha = 1;
+      mtx.drawImage(buf, 0, 0, W, H, 0, 0, melt.width, melt.height);
+
+      // 2) Blur the small image (strong + cheap)
+      mtx.filter = `blur(${Math.max(10, S.blurBase * 0.9)}px)`;
+      mtx.globalAlpha = 1;
+      mtx.drawImage(melt, 0, 0);
+
+      // 3) Upsample into post with heavy blur = vapor
+      ptx.globalCompositeOperation = "source-over";
+      ptx.clearRect(0, 0, W, H);
+
+      ptx.filter = `blur(${Math.max(18, S.blurBase * 1.35)}px)`;
+      ptx.globalAlpha = 1;
+      ptx.drawImage(melt, 0, 0, melt.width, melt.height, 0, 0, W, H);
+
+      // extra smoothing pass
+      ptx.filter = `blur(${Math.max(10, S.blurDetail * 1.6)}px)`;
+      ptx.globalAlpha = 0.9;
+      ptx.drawImage(melt, 0, 0, melt.width, melt.height, 0, 0, W, H);
+
+      ptx.filter = "none";
+      ptx.globalAlpha = 1;
+
+      SRC = post;
     }
-  </script>
+
+    // composite to main
+    ctx.globalCompositeOperation = "source-over";
+    ctx.clearRect(0, 0, S.w, S.h);
+
+    // base pass
+    ctx.save();
+    ctx.filter = `blur(${S.blurBase}px)`;
+    ctx.globalAlpha = 1;
+    ctx.drawImage(SRC, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    // detail pass
+    ctx.save();
+    ctx.filter = `blur(${S.blurDetail}px)`;
+    ctx.globalCompositeOperation = "lighter";
+    ctx.globalAlpha = 0.55;
+    ctx.drawImage(SRC, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    // glow pass
+    ctx.save();
+    ctx.filter = `blur(${S.blurGlow}px)`;
+    ctx.globalCompositeOperation = "lighter";
+    ctx.globalAlpha = S.glow;
+    ctx.drawImage(SRC, 0, 0, W, H, 0, 0, S.w, S.h);
+    ctx.restore();
+
+    ctx.globalAlpha = 1;
+    ctx.globalCompositeOperation = "source-over";
+    ctx.filter = "none";
+  }
+
+  gsap.ticker.fps(60);
+  gsap.ticker.add(step);
+
+  // Reduced motion
+  if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
+    gsap.ticker.remove(step);
+    for (let i = 0; i < 20; i++) step();
+  }
+</script>
   <script src="app.js"></script>
 </body>
 </html>
