--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -692,7 +692,7 @@
     speed: 0.0046,
 
     // smoothness / pixel control
-    scale: 0.70,   // desktop baseline (kept)
+    scale: 0.70,   // desktop baseline
     fade: 0.22,
     glow: 0.25,
     density: 0.66,
@@ -712,10 +712,8 @@
     mx: 0, my: 0, px: 0, py: 0
   };
 
-  // Mobile detection
   const IS_MOBILE = window.matchMedia("(hover: none) and (pointer: coarse)").matches;
 
-  // Desktop baseline (restored on desktop)
   const DESKTOP = {
     dprMax: 2,
     scale: S.scale,
@@ -728,20 +726,25 @@
   const MOBILE = {
     dprMax: 3,
 
-    // keep enough buffer detail for blur to blend smoothly
+    // buffer resolution (keep high so blur has data)
     scale: 1.05,
 
-    // blur
+    // blur multipliers
     blurBaseMul: 3.2,
     blurDetailMul: 2.4,
     blurGlowMul: 3.2,
 
-    // “visible circles” killers
+    // reduce stamps
     puffSizeMul: 0.58,
     alphaMul: 0.32,
 
     // stamp killer
-    meltScale: 0.22
+    meltScale: 0.22,
+
+    // ✅ make the effect “smaller” vertically on mobile (still full-width)
+    heightMul: 0.72, // overall vertical compression (0.60–0.85)
+    ampMul: 0.65,    // wave amplitude (0.55–0.80)
+    bandMul: 0.58    // ribbon thickness (0.45–0.70)
   };
 
   const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
@@ -776,7 +779,7 @@
     post.height = buf.height;
     ptx.setTransform(1, 0, 0, 1, 0, 0);
 
-    // Melt buffer is downsampled on mobile only
+    // Melt buffer (downsampled on mobile)
     const meltScale = IS_MOBILE ? MOBILE.meltScale : 1;
     melt.width  = Math.max(1, Math.floor(buf.width  * meltScale));
     melt.height = Math.max(1, Math.floor(buf.height * meltScale));
@@ -785,7 +788,7 @@
     S.bw = buf.width;
     S.bh = buf.height;
 
-    // blur tuning (ONLY mobile changes)
+    // blur tuning
     if (IS_MOBILE) {
       S.blurBase   = Math.round(DESKTOP.blurBase   * MOBILE.blurBaseMul);
       S.blurDetail = Math.round(DESKTOP.blurDetail * MOBILE.blurDetailMul);
@@ -808,13 +811,12 @@
 
     // clear
     btx.fillStyle = "rgba(0,0,0,1)";
-    btx.fillRect(0, 0, S.bw, S.bh);
-    ptx.clearRect(0, 0, S.bw, S.bh);
+    btx.fillRect(0, 0, buf.width, buf.height);
+    ptx.clearRect(0, 0, post.width, post.height);
     mtx.clearRect(0, 0, melt.width, melt.height);
     ctx.clearRect(0, 0, S.w, S.h);
   }
 
-  // ✅ Only listen to normal window resize. (visualViewport resize causes “fade” on scroll on mobile)
   window.addEventListener("resize", resize, { passive: true });
   resize();
 
@@ -831,7 +833,7 @@
     );
   }
 
-  // Airy puff (no bright white hotspot)
+  // Airy puff
   function puff(x, y, r, colA, colB, a) {
     const g = btx.createRadialGradient(x, y, 0, x, y, r);
     g.addColorStop(0.0,  colA.replace("{a}", (0.52 * a).toFixed(4)));
@@ -872,10 +874,11 @@
     // draw vapor
     btx.globalCompositeOperation = "lighter";
 
+    // ✅ optionally center the band a little more on mobile
     const layers = [
-      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0, strength: 0.92 },
-      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3, strength: 0.80 },
-      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2, strength: 0.70 }
+      { y: IS_MOBILE ? 0.40 : 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0, strength: 0.92 },
+      { y: IS_MOBILE ? 0.56 : 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3, strength: 0.80 },
+      { y: IS_MOBILE ? 0.68 : 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2, strength: 0.70 }
     ];
 
     for (const L of layers) {
@@ -884,14 +887,22 @@
 
       const steps = IS_MOBILE ? 190 : 120;
 
+      // ✅ mobile-only vertical compression knobs
+      const ampMul  = IS_MOBILE ? MOBILE.ampMul : 1;
+      const bandMul = IS_MOBILE ? MOBILE.bandMul : 1;
+      const hMul    = IS_MOBILE ? MOBILE.heightMul : 1;
+
       for (let i = 0; i <= steps; i++) {
         const u = i / steps;
 
         const TAIL = 520;
         const x  = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
-        const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
 
-        const band = S.band * H;
+        const yBase = H * L.y;
+        const yRaw  = ribbonY(u, yBase, H * L.amp * ampMul, L.phase) + S.py * 12;
+        const yC    = yBase + (yRaw - yBase) * hMul; // ✅ compress around centerline
+
+        const band = (S.band * H) * bandMul; // ✅ thinner ribbon on mobile
 
         const tt = S.t * 0.9 + L.phase + u * 2.0;
         const wx = n2(tt * 0.8, u * 4.0 + L.phase);
@@ -918,7 +929,7 @@
         const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
         const sizeMul = IS_MOBILE ? MOBILE.puffSizeMul : 1;
 
-        // PASS 1
+        // PASS 1 (wide haze)
         const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)) * sizeMul, 52, 220);
 
         const a1Base =
@@ -930,7 +941,7 @@
         const a1 = IS_MOBILE ? a1Base * MOBILE.alphaMul : a1Base;
         puff(x, yC, r1, A, B, a1);
 
-        // PASS 2 (inner wisps) ✅ reduced on mobile
+        // PASS 2 (inner wisps) reduced on mobile
         const r2 = clamp(r1 * 0.40, 20, 88);
         const a2 = IS_MOBILE ? a1 * 0.38 : a1 * 0.78;
 
@@ -941,7 +952,7 @@
         puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, IS_MOBILE ? a2 * 0.20 : a2 * 0.46);
       }
 
-      // super soft background volume (mobile: mint-only, no purple)
+      // super soft background volume (mobile: mint-only)
       const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
       const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
 
@@ -957,7 +968,7 @@
 
     btx.globalCompositeOperation = "source-over";
 
-    // ✅ MOBILE “STAMP KILLER”
+    // MOBILE stamp killer
     let SRC = buf;
 
     if (IS_MOBILE) {
@@ -1027,7 +1038,6 @@
   gsap.ticker.fps(60);
   gsap.ticker.add(step);
 
-  // Reduced motion
   if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
     gsap.ticker.remove(step);
     for (let i = 0; i < 20; i++) step();
