--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -667,59 +667,42 @@
     }
   </script>
 
- <!-- HERO / SHEET ScrollTrigger
-     ✅ Assumes `hero` and `sheet` already exist (DO NOT redeclare them here)
--->
-<script>
-  gsap.registerPlugin(ScrollTrigger);
-
-  // Desktop only (mobile fallback handled in CSS)
-  if (!window.matchMedia("(max-width: 980px)").matches) {
-    // uses existing `sheet`
-    gsap.set(sheet, { y: window.innerHeight }); // matches the translateY(100vh) idea
-
-    gsap.to(sheet, {
-      y: 0,
-      ease: "none",
-      scrollTrigger: {
-        // uses existing `hero`
-        trigger: hero,
-        start: "top top",
-        end: "+=70%",   // slide duration
-        scrub: 0.9,
-        pin: true,       // pins hero only during the slide
-        pinSpacing: true,
-        anticipatePin: 1
-      }
-    });
-
-    // refresh on resize so y uses updated vh
-    window.addEventListener("resize", () => ScrollTrigger.refresh());
-  }
-</script>
-
-<!-- VAPOR CANVAS
-     ✅ Desktop unchanged
-     ✅ Mobile-only combo: melt pass + higher sim res + softer detail pass
--->
 <script>
   const canvas = document.getElementById("vapor");
   const ctx = canvas.getContext("2d", { alpha:true });
 
-  // Offscreen buffer (we render the sim here, then blur-composite to main)
+  // Offscreen buffer (simulation)
   const buf = document.createElement("canvas");
   const btx = buf.getContext("2d", { alpha:true });
 
-  // ✅ Mobile-only post + melt buffers (to blend circles)
+  // ✅ Mobile normalization buffers
   const post = document.createElement("canvas");
   const ptx  = post.getContext("2d", { alpha:true });
 
   const melt = document.createElement("canvas");
   const mtx  = melt.getContext("2d", { alpha:true });
 
-  const mqMobile = window.matchMedia("(max-width: 980px)");
+  // ✅ Optional dither (mobile only) to kill gradient banding rings
+  const noise = document.createElement("canvas");
+  const ntx   = noise.getContext("2d", { alpha:true });
+  noise.width = 128;
+  noise.height = 128;
+  (function seedNoise(){
+    const img = ntx.createImageData(noise.width, noise.height);
+    for (let i=0;i<img.data.length;i+=4){
+      const v = (Math.random() * 255) | 0;
+      img.data[i+0] = v;
+      img.data[i+1] = v;
+      img.data[i+2] = v;
+      img.data[i+3] = 255;
+    }
+    ntx.putImageData(img, 0, 0);
+  })();
+
+  // Mobile detection: width breakpoint OR coarse pointer devices
+  const mqMobile = window.matchMedia("(max-width: 980px), (hover: none) and (pointer: coarse)");
   let isMobile = mqMobile.matches;
-  mqMobile.addEventListener?.("change", (e) => { isMobile = e.matches; resize(); });
+  mqMobile.addEventListener?.("change", (e)=>{ isMobile = e.matches; resize(); });
 
   const S = {
     w:0, h:0,
@@ -729,30 +712,35 @@
     // slow drift
     speed: 0.0046,
 
-    // ✅ smoothness / pixel control (desktop baseline — unchanged)
+    // ✅ Desktop baseline (UNCHANGED from your version)
     scale: 0.70,
     fade: 0.22,
     glow: 0.25,
     density: 0.66,
 
-    // across-screen band behavior
     amp: 0.16,
     drift: 0.16,
     band: 0.16,
     breakUp: 1.05,
 
-    // composite blur (desktop baseline — unchanged)
     blurBase: 10,
     blurDetail: 4,
     blurGlow: 14,
 
-    // ✅ mobile-only best combo
-    mobileScale: 0.90,        // higher sim res on mobile (kills rings)
-    mobileDetailAlpha: 0.32,  // soften detail pass (prevents circles popping back)
-    mobileMeltDown: 0.62,     // downsample ratio for melt
-    mobileMeltBlur: 18,       // strong melt blur
+    // ✅ Mobile: force same look everywhere by standardizing internal sim resolution
+    // This sets the simulation's LONG SIDE to a constant pixel size across all phones.
+    mobileSimLongSide: 980,   // try 900–1100; higher = smoother/heavier
 
-    // mouse drift
+    // ✅ Mobile: “melt” normalization (downsample → blur hard → upsample)
+    mobileMeltDown: 0.62,
+    mobileMeltBlur: 18,
+
+    // ✅ Mobile: soften detail pass so circles don’t reappear
+    mobileDetailAlpha: 0.30,
+
+    // ✅ Mobile: optional dither strength (0 to disable)
+    mobileDitherAlpha: 0.03,
+
     mx:0, my:0, px:0, py:0
   };
 
@@ -760,26 +748,33 @@
     S.w = Math.floor(window.innerWidth);
     S.h = Math.floor(window.innerHeight);
 
-    // Main canvas uses DPR for sharp UI layers
+    // Main canvas uses DPR for crisp UI layers
     canvas.width  = Math.floor(S.w * S.dpr);
     canvas.height = Math.floor(S.h * S.dpr);
     canvas.style.width  = S.w + "px";
     canvas.style.height = S.h + "px";
     ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
 
-    // ✅ Buffer does NOT use DPR
-    const simScale = isMobile ? S.mobileScale : S.scale;
-
-    buf.width  = Math.floor(S.w * simScale);
-    buf.height = Math.floor(S.h * simScale);
+    // ✅ SIM BUFFER SIZING
+    if (!isMobile) {
+      // Desktop: exactly your original behavior
+      buf.width  = Math.floor(S.w * S.scale);
+      buf.height = Math.floor(S.h * S.scale);
+    } else {
+      // Mobile: fixed internal “long side” sim resolution (consistent across devices)
+      const longSide = Math.max(S.w, S.h);
+      const k = S.mobileSimLongSide / longSide;  // scale factor to reach standard long side
+      buf.width  = Math.max(2, Math.floor(S.w * k));
+      buf.height = Math.max(2, Math.floor(S.h * k));
+    }
     btx.setTransform(1,0,0,1,0,0);
 
-    // post matches buf (same pixel space as sim)
+    // post matches sim size
     post.width  = buf.width;
     post.height = buf.height;
     ptx.setTransform(1,0,0,1,0,0);
 
-    // melt is smaller (mobile-only; still allocate so no branching errors)
+    // melt is smaller (mobile-only, but we allocate regardless)
     const md = isMobile ? S.mobileMeltDown : 0.60;
     melt.width  = Math.max(2, Math.floor(buf.width  * md));
     melt.height = Math.max(2, Math.floor(buf.height * md));
@@ -789,16 +784,13 @@
     S.bw = buf.width;
     S.bh = buf.height;
 
-    // Quality hints
+    // smoothing hints (browser-dependent, but keep them on)
     ctx.imageSmoothingEnabled = true;
     ctx.imageSmoothingQuality = "high";
-
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
-
     ptx.imageSmoothingEnabled = true;
     ptx.imageSmoothingQuality = "high";
-
     mtx.imageSmoothingEnabled = true;
     mtx.imageSmoothingQuality = "high";
 
@@ -819,12 +811,10 @@
 
   const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
 
-  // organic-ish fast noise
   function n2(x,y){
     return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
   }
 
-  // Airy puff (no bright white hotspot)
   function puff(x,y,r, colA, colB, a){
     const g = btx.createRadialGradient(x,y,0, x,y,r);
     g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
@@ -837,7 +827,6 @@
     btx.fill();
   }
 
-  // Across-screen centerline
   function ribbonY(u, yBase, amp, phase){
     const t = S.t;
     const f1 = Math.sin(t*0.95 + u*6.2 + phase);
@@ -850,7 +839,6 @@
   function step(){
     S.t += S.speed;
 
-    // mouse drift
     S.px += (S.mx - S.px) * 0.03;
     S.py += (S.my - S.py) * 0.03;
 
@@ -875,12 +863,12 @@
       const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
       const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
-      const steps = 120; // continuous bands across screen
+      const steps = 120;
 
       for(let i=0;i<=steps;i++){
         const u = i/steps;
 
-        const TAIL = 520; // <— bigger = longer ends
+        const TAIL = 520;
         const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
         const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
 
@@ -893,7 +881,6 @@
         const jx = wx * band * 0.36 * S.breakUp;
         const jy = wy * band * 0.30 * S.breakUp;
 
-        // soft color drift
         const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
         const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
 
@@ -902,12 +889,10 @@
 
         const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
 
-        // PASS 1: wide haze sheet
         const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
         const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
         puff(x, yC, r1, A, B, a1);
 
-        // PASS 2: wisps / inner turbulence
         const r2 = clamp(r1*0.40, 20, 88);
         const a2 = a1 * 0.78;
         puff(x + jx, yC + jy, r2, B, A, a2);
@@ -917,7 +902,6 @@
         puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
       }
 
-      // super soft background volume
       const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
       const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
       puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
@@ -925,26 +909,24 @@
 
     btx.globalCompositeOperation = "source-over";
 
-    // ✅ Choose source texture:
-    // Desktop: use buf directly (unchanged look)
-    // Mobile: melt pass to blend circles, then use post as the source
+    // ✅ Mobile normalization source:
+    // Desktop: buf directly (your original look)
+    // Mobile: melt pass -> post, then composite from post
     let src = buf;
 
     if (isMobile) {
-      // 1) Downsample + blur into melt
+      // Downsample + heavy blur into melt
       mtx.save();
       mtx.clearRect(0,0,melt.width,melt.height);
       mtx.filter = `blur(${S.mobileMeltBlur}px)`;
-      mtx.globalCompositeOperation = "source-over";
       mtx.globalAlpha = 1;
       mtx.drawImage(buf, 0, 0, W, H, 0, 0, melt.width, melt.height);
       mtx.restore();
       mtx.filter = "none";
 
-      // 2) Upsample back to post (smooth field)
+      // Upsample back to post
       ptx.save();
       ptx.clearRect(0,0,post.width,post.height);
-      ptx.globalCompositeOperation = "source-over";
       ptx.globalAlpha = 1;
       ptx.drawImage(melt, 0, 0, melt.width, melt.height, 0, 0, post.width, post.height);
       ptx.restore();
@@ -952,11 +934,11 @@
       src = post;
     }
 
-    // ✅ Final composite to main canvas
+    // Final composite to main canvas
     ctx.globalCompositeOperation = "source-over";
     ctx.clearRect(0,0,S.w,S.h);
 
-    // base pass (soft)
+    // base pass
     ctx.save();
     ctx.filter = `blur(${S.blurBase}px)`;
     ctx.globalAlpha = 1;
@@ -971,13 +953,27 @@
     ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // glow pass (very soft)
+    // glow pass
     ctx.save();
     ctx.filter = `blur(${S.blurGlow}px)`;
     ctx.globalCompositeOperation = "lighter";
     ctx.globalAlpha = S.glow;
     ctx.drawImage(src, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
+
+    // ✅ Mobile-only dither overlay (breaks banding rings)
+    if (isMobile && S.mobileDitherAlpha > 0) {
+      ctx.save();
+      ctx.globalCompositeOperation = "source-over";
+      ctx.globalAlpha = S.mobileDitherAlpha;
+      // tile noise across the whole canvas
+      for (let y=0; y<S.h; y+=noise.height) {
+        for (let x=0; x<S.w; x+=noise.width) {
+          ctx.drawImage(noise, x, y);
+        }
+      }
+      ctx.restore();
+    }
 
     ctx.globalAlpha = 1;
     ctx.globalCompositeOperation = "source-over";
